deploy/elastic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic
  labels:
    app: elastic
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      name: elastic
      labels:
        app: elastic
        tier: backend
    spec:
      containers:
      - image: docker.elastic.co/elasticsearch/elasticsearch:6.3.2
        name: elastic
        ports:
        - containerPort: 9200
        - containerPort: 9300
        resources:
          requests:
            memory: "1Gi"
            cpu: "10m"
