deploy/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: frontend
    tier: backend
