deploy/tarantool-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tarantool
spec:
  ports:
  - port: 3301
    targetPort: 3301
  selector:
    app: tarantool
    tier: backend
